--- a/graphdb/pom.xml
+++ b/graphdb/pom.xml
@@ -56,13 +56,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.tinkerpop.blueprints</groupId>
-			<artifactId>blueprints-core</artifactId>
+			<groupId>com.wu-man</groupId>
+			<artifactId>blueprints-android-core</artifactId>
 			<version>${blueprints.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.tinkerpop.blueprints</groupId>
-			<artifactId>blueprints-orient-graph</artifactId>
+			<groupId>com.wu-man</groupId>
+			<artifactId>blueprints-android-orient-graph</artifactId>
 			<version>${blueprints.version}</version>
 		</dependency>
 
@@ -92,6 +92,13 @@
 			<version>5.14.1</version>
 			<scope>test</scope>
 		</dependency>
+        
+        <dependency>
+            <groupId>net.sf.kxml</groupId>
+            <artifactId>kxml2</artifactId>
+            <version>2.3.0</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
