--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.wu-man</groupId>
         <artifactId>orientdb-android-parent</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -83,7 +82,7 @@
                                 <descriptor>${basedir}/src/main/assembly/bin.xml</descriptor>
                             </descriptors>
                             <filters>
-                                <filter></filter>
+                                <filter />
                             </filters>
                             <ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
                             <tarLongFileMode>gnu</tarLongFileMode>
