--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.wu-man</groupId>
     <artifactId>orientdb-android-parent</artifactId>
-    <version>1.1.0.0</version>
+    <version>1.1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>OrientDB-Android</name>
