--- a/enterprise/pom.xml
+++ b/enterprise/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.wu-man</groupId>
     <artifactId>orientdb-android-parent</artifactId>
-    <version>1.1.0.1-SNAPSHOT</version>
+    <version>1.1.0.1</version>
   </parent>
 
   <artifactId>orientdb-android-enterprise</artifactId>
