--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.wu-man</groupId>
         <artifactId>orientdb-android-parent</artifactId>
-        <version>1.1.0.1</version>
+        <version>1.1.0.2-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
